; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_redis.c_attach_receiver.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_redis.c_attach_receiver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_mruby_redis_command_context_t = type { %struct.TYPE_6__*, i32 }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_h2o_mruby_redis_command_context_t*, i32)* @attach_receiver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @attach_receiver(%struct.st_h2o_mruby_redis_command_context_t* %0, i32 %1) #0 {
  %3 = alloca %struct.st_h2o_mruby_redis_command_context_t*, align 8
  %4 = alloca i32, align 4
  store %struct.st_h2o_mruby_redis_command_context_t* %0, %struct.st_h2o_mruby_redis_command_context_t** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.st_h2o_mruby_redis_command_context_t*, %struct.st_h2o_mruby_redis_command_context_t** %3, align 8
  %6 = getelementptr inbounds %struct.st_h2o_mruby_redis_command_context_t, %struct.st_h2o_mruby_redis_command_context_t* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = call i32 @mrb_nil_p(i32 %7)
  %9 = call i32 @assert(i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.st_h2o_mruby_redis_command_context_t*, %struct.st_h2o_mruby_redis_command_context_t** %3, align 8
  %12 = getelementptr inbounds %struct.st_h2o_mruby_redis_command_context_t, %struct.st_h2o_mruby_redis_command_context_t* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 8
  %13 = load %struct.st_h2o_mruby_redis_command_context_t*, %struct.st_h2o_mruby_redis_command_context_t** %3, align 8
  %14 = getelementptr inbounds %struct.st_h2o_mruby_redis_command_context_t, %struct.st_h2o_mruby_redis_command_context_t* %13, i32 0, i32 0
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @mrb_gc_register(i32 %21, i32 %22)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @mrb_nil_p(i32) #1

declare dso_local i32 @mrb_gc_register(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
